# agent-diary

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml
backups/20260528T145236Z/: agent-diary-reconciled-working-20260528.tgz  metadata.txt
data/config/: config.toml
docs/: agent-integration.md  canonical-conversation-transcript.md  future-derived-data-model.md  guinea-pig-test-2026-05-20.md  guinea-pig-testing-quickstart.md  memory-engine-work-journal-2026-05-28.md  open-loops-producer-v1.md  ops-sync-authority.md  parallel-use-routine.md  release-v1-weekend-checklist.md  review-prompt-deepseek-v1.md  review-prompt-sonnet-v1.md  tauri-client-v2.md  truthful-recurring-ingestion.md  ui-v1-surface-contract.md  user-guide-v1.html  user-guide-v1.md  work-trace-layer-v1.md
examples/: first_real_test_2026-05-20.jsonl  guinea_pig_seed.jsonl  openclaw_memory_test_corpus_2026-05-20.jsonl  telegram-direct-reconstructed.jsonl  telegram-direct-session-import.jsonl  telegram_truth_subset.jsonl  telegram_truth_subset_120.jsonl  verbatim_followup_2026-05-20.jsonl
scripts/: backfill-hermes-work-traces.py  hermes-to-diary.sh
src-tauri/: Cargo.toml  tauri.conf.json
src/agent_diary/: __init__.py  config.py
src/agent_diary/analytics/: __init__.py  common.py  compressed_memory.py  conversation_briefs.py  open_loops.py
src/agent_diary/api/: __init__.py  schemas.py
src/agent_diary/cli/: __init__.py  main.py  session_builder.py  (+3 more)
tests/: test_append_entry_slice.py
ui/: README.md  app.js  index.html  styles.css
(+12 files in other folders)
