[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-diary"
version = "0.1.0"
description = "Agent Diary backend/service/CLI scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Willard Mechem" }
]
dependencies = []

[project.scripts]
agent-diary = "agent_diary.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
