[package]
name = "agent-diary-client"
version = "0.1.0"
description = "Agent Diary — browse and search your Hermes agent's memory from the desktop"
authors = ["Willard Mechem"]
license = "MIT"
repository = "https://github.com/Mechem/agent-diary"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
